--- a/main.html
+++ b/main.html
@@ -8,6 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test="shoppingList">car</li>
+		<li data-ns-test="shoppingList">house</li>
+		<li data-ns-test="shoppingList">bike</li>
+	</ol>
     <script type="text/javascript" src="./script.js">
 </script>
 
