--- a/main.html
+++ b/main.html
@@ -13,6 +13,11 @@
 		<li data-ns-test="shoppingList">house</li>
 		<li data-ns-test="shoppingList">bike</li>
 	</ol>
+	<ul>
+		<li data-ns-test="holidayList">mumbai</li>
+		<li data-ns-test="holidayList">goa</li>
+		<li data-ns-test="holidayList">banglore</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
