--- a/main.html
+++ b/main.html
@@ -9,9 +9,9 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<ol>
-		<li data-ns-test="shoppingList">car</li>
-		<li data-ns-test="shoppingList">house</li>
-		<li data-ns-test="shoppingList">bike</li>
+		<li>car</li>
+		<li>house</li>
+		<li>bike</li>
 	</ol>
 	<ul>
 		<li data-ns-test="holidayList">mumbai</li>
